CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
CMAKE_POLICY(VERSION 2.8)

PROJECT(linked_hash_st_bench)
LINK_LIBRARIES(gtest pthread)
AUX_SOURCE_DIRECTORY(. DIR_SRCS)

ADD_EXECUTABLE(linked_hash_st_bench ${DIR_SRCS})

SET(CMAKE_BUILD_TYPE "Debug")  
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb")  
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")  